# assistants_core

./: .gitignore  README.md  examples.py  pyproject.toml
assistants_core/: __init__.py  client.py  exceptions.py  models.py
assistants_core/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  mistral_provider.py  openai_provider.py
tests/: test_basic.py
